--- a/src/assets/style/app.css
+++ b/src/assets/style/app.css
@@ -4,11 +4,12 @@
 
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
 
 html,
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  scroll-behavior: smooth;
 }
 
 .container {
